--- a/ModelGraph/ModelGraph/ModelGraph.csproj
+++ b/ModelGraph/ModelGraph/ModelGraph.csproj
@@ -124,8 +124,10 @@
       <DependentUpon>ModelTreeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ModelTree\ModelTreeUICache.cs" />
-    <Compile Include="Controls\Shapes\Line.cs" />
+    <Compile Include="Controls\Shapes\Circle.cs" />
+    <Compile Include="Controls\Shapes\PolyLine.cs" />
     <Compile Include="Controls\Shapes\Shape.cs" />
+    <Compile Include="Controls\Shapes\ShapeUtils.cs" />
     <Compile Include="Controls\SymbolEdit\SymbolEditControl.xaml.cs">
       <DependentUpon>SymbolEditControl.xaml</DependentUpon>
     </Compile>
