Great leap forward defining symbol shapes in SymbolEditControl

--- a/ModelGraph/ModelGraph/ModelGraph.csproj
+++ b/ModelGraph/ModelGraph/ModelGraph.csproj
@@ -124,7 +124,7 @@
       <DependentUpon>ModelTreeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ModelTree\ModelTreeUICache.cs" />
-    <Compile Include="Controls\Shapes\Spring.cs" />
+    <Compile Include="Controls\Shapes\PolySpline.cs" />
     <Compile Include="Controls\Shapes\Polyline.cs" />
     <Compile Include="Controls\Shapes\Central.cs" />
     <Compile Include="Controls\Shapes\PolyGear.cs" />
