Split SymbolEditDrawing into it's own file

--- a/ModelGraph/ModelGraph/ModelGraph.csproj
+++ b/ModelGraph/ModelGraph/ModelGraph.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>SymbolEditControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\SymbolEdit\SymbolEditControlActions.cs" />
+    <Compile Include="Controls\SymbolEdit\SymbolEditControlDrawing.cs" />
     <Compile Include="Controls\SymbolEdit\SymbolEditControlEvents.cs" />
     <Compile Include="Helpers\EnumToBooleanConverter.cs" />
     <Compile Include="Helpers\Json.cs" />
