Began debug of AdjustSymbol for parallel connections

--- a/ModelGraph/ModelGraph/ModelGraph.csproj
+++ b/ModelGraph/ModelGraph/ModelGraph.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controls\Shapes\Line.cs" />
     <Compile Include="Controls\Shapes\PolySpike.cs" />
     <Compile Include="Controls\Shapes\PolyPulse.cs" />
+    <Compile Include="Controls\Shapes\PolySpline.cs" />
     <Compile Include="Controls\Shapes\PolyWave.cs" />
     <Compile Include="Controls\Shapes\PolySplring.cs" />
     <Compile Include="Controls\Shapes\Polyline.cs" />
