--- a/ModelGraph/RepositoryUWP/RepositoryUWP.csproj
+++ b/ModelGraph/RepositoryUWP/RepositoryUWP.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="RepositoryRead.cs" />
+    <Compile Include="RepositoryWrite2.cs" />
     <Compile Include="RepositoryWrite.cs" />
     <Compile Include="ReadValueDictionary.cs" />
     <Compile Include="WriteValueDictionary.cs" />
